--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
   </section>
   <footer class="footer-section">
     <div class="container">
-        <div class="contact-form w-50 mx-auto bg-white p-5 text-center">
+        <div class="contact-form mx-auto bg-white p-5 text-center">
           <h2 class="my-5">Contact</h2>
           <form action="#">
             <div class="row">
