--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
           <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-4">
             <div class="footer-widget mt-5">
               <span class="d-block">Email</span>
-              <a href="mailto:mursalin@email.com">mursalin@email.com</a>
+              <a href="mailto:mursalin@email.com">mursalin@gmail.com</a>
             </div>
           </div>
           <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-4">
